<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtlongitude"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textCapWords" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtlongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtname"
        android:layout_toRightOf="@+id/lbllongitude"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/txtlatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtlongitude"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtlongitude"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/lblname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtname"
        android:layout_alignParentLeft="true"
        android:text="@string/lblname" />

    <TextView
        android:id="@+id/lbllongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtlongitude"
        android:layout_alignParentLeft="true"
        android:text="@string/lbllongitude" />

    <TextView
        android:id="@+id/lbllatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtlatitude"
        android:layout_alignParentLeft="true"
        android:text="@string/lbllatitude" />

    <Button
        android:id="@+id/btnreturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/lblreturn" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/lbladd" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnreturn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtlatitude"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/layhours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/lsthours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btnaddhour" >
            </ListView>

            <Button
                android:id="@+id/btnaddhour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/lbladdhour" />

            <TextView
                android:id="@+id/lblhours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/btnaddhour"
                android:layout_alignParentLeft="true"
                android:text="@string/lblhours" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layprices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/lstprices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btnaddprice" >
            </ListView>

            <Button
                android:id="@+id/btnaddprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/lbladdprice" />

            <TextView
                android:id="@+id/lblprices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/btnaddprice"
                android:layout_alignParentLeft="true"
                android:text="@string/lblprices" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>