<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtsearchlongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtsearchlatitude"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblsearchlongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtsearchlongitude"
        android:layout_alignParentLeft="true"
        android:text="@string/lbllongitude" />

    <EditText
        android:id="@+id/txtsearchlatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtsearchlongitude"
        android:layout_toRightOf="@+id/btnreturn"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/lblsearchlatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtsearchlatitude"
        android:layout_alignParentLeft="true"
        android:text="@string/lbllatitude" />

    <Button
        android:id="@+id/btnreturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/lblreturn" />

    <Button
        android:id="@+id/btnlookup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/lbllookup" />

    <EditText
        android:id="@+id/txtmiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtsearchlatitude"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtmiles"
        android:layout_alignParentLeft="true"
        android:text="@string/lblmiles" />

</RelativeLayout>
