<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txthour"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtprice"
        android:layout_alignParentLeft="true"
        android:text="@string/lblprice" />

    <EditText
        android:id="@+id/txthour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtprice"
        android:layout_toRightOf="@+id/lblhour"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/lblhour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txthour"
        android:layout_alignParentLeft="true"
        android:text="@string/lbltime" />

    <Button
        android:id="@+id/btnpriceaccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txthour"
        android:text="@string/lblaccept" />

    <Button
        android:id="@+id/btnpricecancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/btnpriceaccept"
        android:text="@string/lblcancel" />

</RelativeLayout>